# perplexity-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  flake.nix
.github/workflows/: auto-tag.yml  release.yml
docs/: perplexity-cli-PRD.md
pkg/aur/: PKGBUILD
src/: error.rs  lib.rs  main.rs
src/api/: agent.rs  chat.rs  client.rs  mod.rs  research.rs  search.rs  stream.rs  think.rs  types.rs
src/cli/: args.rs  completions.rs  mod.rs
src/config/: mod.rs  types.rs
src/cost/: mod.rs  tracker.rs
src/interactive/: commands.rs  history.rs  mod.rs
src/output/: citations.rs  json.rs  markdown.rs  mod.rs  plain.rs
tests/: cli_integration.rs
tests/fixtures/: agent_response.json  chat_response.json  chat_stream.txt  chat_stream_reasoning.txt  error_401.json  research_list_response.json  research_status_complete.json  research_submit_response.json  search_response.json
