[package]
name = "pplx"
version = "0.3.5"
edition = "2021"
description = "A high-performance Rust CLI for the Perplexity API"
license = "MIT"
repository = "https://github.com/osodevops/perplexity-cli"
keywords = ["perplexity", "cli", "ai", "search"]
categories = ["command-line-utilities"]

[lib]
name = "pplx"
path = "src/lib.rs"

[[bin]]
name = "pplx"
path = "src/main.rs"

[[bin]]
name = "gen-man"
path = "src/bin/gen-man.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
reqwest-eventsource = "0.6"
futures = "0.3"
clap = { version = "4", features = ["derive", "env", "string"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
termimad = "0.30"
crossterm = "0.28"
owo-colors = "4"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
is-terminal = "0.4"
rustyline = "15"
clap_mangen = "0.2"
toml_edit = "0.22"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
